tests/valid/trait/assoc_projection_trait_bound_arg_compat.facet
trait Provider {
  type Item;
}

impl Provider for unrestricted isize {
  type Item = unrestricted bool;
}

trait Marker<T>;

impl Marker<unrestricted bool> for unrestricted isize;

struct Box<T> where T: Marker<unrestricted <unrestricted isize as Provider>::Item> {
  value: unrestricted T
}

fn main() -> unrestricted Box<unrestricted isize> {
  Box<unrestricted isize> { value = 1 }
}
