tests/invalid/trait/generic_impl_missing_arg.facet
trait Convert<T>;

struct Box {
  value: unrestricted isize
}

impl Convert for affine Box;

fn main() -> unrestricted () {
  ()
}
